--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <Html> 
       
 <Head> 
+      <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-35KHYJLC3Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-35KHYJLC3Z');
+</script>
  
 <Title>     
 Create a Login form   
