--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@ window.dataLayer.push({
   
 });
              </script>
+      </script>
+window.dataLayer = window.dataLayer ||[];
+window.dataLayer.push({
+  'event': 'signup',
+  'signupMethod' : 'email' 
+});
+           </script>
  
 <Title>     
 Create a Login form   
