--- a/index.html
+++ b/index.html
@@ -50,6 +50,19 @@ window.dataLayer.push({
                   
             })
       </script>
+      <script>
+window.dataLayer = window.dataLayer || [];
+window.dataLayer.push(
+{
+  event : 'view_item',
+        ecommerce:
+        {
+            item_name:"Web Analytics",
+            item_id:"Course_001",
+            item_cat:"Online Courses",
+}
+});
+</script>
 
       
 <!-- Google Tag Manager -->
